Remove Java 11 requirement
Build always with the Java version provided, as all the targeted
versions are now supported.
Disable the lint `this-escape` to pass the compilation.
Address other warns.

Signed-off-by: thc202 <thc202@gmail.com>